--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@hookform/resolvers": "^5.0.1",
+    "@n8n/chat": "^0.27.1",
     "@radix-ui/react-avatar": "^1.1.4",
     "@radix-ui/react-collapsible": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.7",
@@ -22,6 +23,7 @@
     "@radix-ui/react-navigation-menu": "^1.2.6",
     "@radix-ui/react-separator": "^1.1.3",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tabs": "^1.1.11",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.2.0",
     "@stripe/react-stripe-js": "^3.6.0",
@@ -35,16 +37,18 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.488.0",
     "ms": "^2.1.3",
-    "next": "^15.2.4",
+    "next": "15.3.2",
     "next-international": "^1.3.1",
     "next-themes": "^0.4.6",
     "query-string": "^9.1.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-hook-form": "^7.55.0",
+    "react-markdown": "^10.1.0",
     "stripe": "^18.0.0",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
+    "uuid": "^11.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -53,11 +57,12 @@
     "@tanstack/eslint-plugin-query": "^5.72.1",
     "@types/ms": "^2.1.0",
     "@types/node": "^20",
-    "@types/react": "19.1.0",
-    "@types/react-dom": "19.1.1",
+    "@types/react": "19.1.4",
+    "@types/react-dom": "19.1.5",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.29.1",
     "eslint": "^9.24.0",
-    "eslint-config-next": "^15.2.4",
+    "eslint-config-next": "15.3.2",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.6",
     "husky": "^9.1.7",
@@ -66,5 +71,9 @@
     "prettier": "^3.5.3",
     "tailwindcss": "^4.1.3",
     "typescript": "^5.8.3"
+  },
+  "overrides": {
+    "@types/react": "19.1.4",
+    "@types/react-dom": "19.1.5"
   }
 }
