--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@tanstack/react-query": "^5.72.1",
     "@tanstack/react-query-devtools": "^5.72.1",
     "@types/lodash": "^4.17.16",
+    "bpmn-js": "^18.6.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -42,6 +43,7 @@
     "next-themes": "^0.4.6",
     "query-string": "^9.1.1",
     "react": "19.1.0",
+    "react-bpmn": "^0.2.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.55.0",
     "react-markdown": "^10.1.0",
