--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@tanstack/react-query": "^5.72.1",
     "@tanstack/react-query-devtools": "^5.72.1",
     "@types/lodash": "^4.17.16",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "bpmn-js": "^18.6.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -48,6 +49,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.55.0",
     "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^15.6.1",
     "stripe": "^18.0.0",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
